conf files updated

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -6,7 +6,7 @@ akka {}
 # Play
 play {
   ## Secret key
-  http.secret.key = "changeme"
+  http.secret.key = "bleh"
 
   ## Modules
   modules{ }
@@ -49,4 +49,17 @@ play {
   }
 }
 
-db { }
+db {
+  default {
+    driver = "org.postgresql.Driver"
+    url = ${PROJECT_DB_URL}
+    username = ${PROJECT_DB_USERNAME}
+    password = ${PROJECT_DB_PASSWORD}
+    hikaricp {
+      maximumPoolSize = "2"
+      minimumIdle = "1"
+      idleTimeout = "1 minute"
+      maxLifetime = "5 minutes"
+    }
+  }
+}
