--- a/conf/application.conf
+++ b/conf/application.conf
@@ -6,7 +6,7 @@ akka {}
 # Play
 play {
   ## Secret key
-  http.secret.key = "l[/q)t>8i-Vo.t-4WVv?7E2h19+<V;e&"
+  http.secret.key = ${PROJECT_SECRET}
 
   ## Modules
   modules{ }
